<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--These are our main navigation actions, they should be checkable and only one should be checked all the time, representing
     the current active screen-->
    <group
        android:id="@+id/main_drawer_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/about_us" />
    </group>
    <!--These are our secondary navigation drawer actions, they don't represent a screen or a state of the app, so they don't need to be checkable-->
    <group
        android:id="@+id/secondary_actions"
        android:checkableBehavior="none">
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact_support_24dp"
            android:title="@string/contact" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share_24dp"
            android:title="@string/share" />
    </group>
</menu>