<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tripNameEditText"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/trip_name"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tripDestinationEditText"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripNameEditText"
        android:hint="@string/destination"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@id/tripDestinationEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tripDestinationEditText"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tripTypeRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/tripDestinationEditText">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_break"
            android:id="@+id/cityBreakRadioButton"
            android:buttonTint="@color/purple_500"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sea_side"
            android:id="@+id/seaSideRadioButton"
            android:buttonTint="@color/purple_500"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountains"
            android:id="@+id/mountainsRadioButton"
            android:buttonTint="@color/purple_500"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priceLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripTypeRadioGroup"
        android:gravity="center">

        <TextView
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:text="@string/price"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            />

        <com.google.android.material.slider.Slider
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="2500"
            android:stepSize="10"
            android:id="@+id/tripPriceSlider"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/priceLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/startDateLayout"
        >

        <TextView
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="@string/trip_start_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <View
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/calendar_foreground"
                android:backgroundTint="@color/purple_500"
                android:layout_marginStart="8dp"
                android:outlineProvider="background"
                android:elevation="4dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21_jun_2021"
                android:id="@+id/startDateTextView"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/startDateLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/endDateLayout"
        >

        <TextView
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="@string/trip_end_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <View
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/calendar_foreground"
                android:backgroundTint="@color/purple_500"
                android:layout_marginStart="8dp"
                android:outlineProvider="background"
                android:elevation="4dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_28_jun_2021"
                android:id="@+id/endDateTextView"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ratingLinearLayout"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endDateLayout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/rating"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tripRatingBar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:rating="0"
            android:layout_marginStart="16dp"
            android:progressTint="@color/purple_500"
            android:isIndicator="false"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="26dp"
        android:id="@+id/cancelButton"
        android:text="@string/cancel"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="26dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>