<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            android:id="@+id/basicTripInfo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tripTitleTextView"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceHeadline5"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/destinationTextView"
                android:layout_below="@+id/tripTitleTextView"
                android:layout_marginTop="8dp"
                android:text="@string/destination"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?android:attr/textColorSecondary" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/favouriteTripIcon"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:src="@drawable/favourite_on_foreground"
                android:contentDescription="@string/favourite_icon" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/basicTripInfo"
            android:contentDescription="@string/trip_image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_margin="12dp">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:rating="3.5"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:progressTint="@color/purple_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tripPrice"
                android:layout_marginEnd="16dp"
                android:text="@string/_0"
                android:textSize="24sp"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/black"
                android:layout_below="@id/tripPrice"
                android:layout_marginTop="24dp" />

        </RelativeLayout>

</RelativeLayout>